Finished double scrollbar issue

--- a/social-dmv-project/src/index.css
+++ b/social-dmv-project/src/index.css
@@ -12,5 +12,6 @@
 @layer base {
     html {
         @apply bg-black;
+        width:100%;
     }
 }
